--- a/web/webshop.xhtml
+++ b/web/webshop.xhtml
@@ -25,7 +25,7 @@
         <p:dataGrid var="item" value="#{listBean.filter}" columns="4" layout="grid"
         rows="10" paginator="true" id="items"
         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-        rowsPerPageTemplate="8,16,24" style="font-size: 14px; width: 100%;">
+        rowsPerPageTemplate="8,16,24" style="font-size: 14px; width: 100%;" multiViewState="true">
          
  
             <p:panel header="Id:#{item.prodid}" style="text-align:center; font-size: 14px;">
